[project]
name = "kyopro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ac-library-python",
    "more-itertools==9.0.0",
    "numba==0.57.0",
    "numpy==1.24.1",
    "scipy==1.10.1",
    "sortedcontainers==2.4.0",
    "sympy==1.11.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]

[tool.uv.sources]
ac-library-python = { git = "https://github.com/not522/ac-library-python" }
